--- a/Calendario2024/Examenes/ExamenIntegrador2.html
+++ b/Calendario2024/Examenes/ExamenIntegrador2.html
@@ -23096,12 +23096,1547 @@ a:link
 	font-size: small;
 	color: #0563C1;
 }
-.auto-style70 {
-	font-size: x-small;
-	color: #000000;
-}
 .auto-style71 {
 	font-family: Arial, Helvetica, sans-serif;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  .auto-style74 {
+	margin-left: 40px;
+	font-size: small;
 }
 
 
@@ -24716,7 +26251,7 @@ a:link
 						  de problemas con computación</strong></span></font></p>
 						  <p class="auto-style72">
 						  <font color="#663366" face="Arial,Helvetica">
-						  <span class="auto-style69">Soluciona problemas de 
+						  <span class="auto-style64">Soluciona problemas de 
 						  diferentes niveles de complejidad mediante la 
 						  aplicación de metodologías computacionales y de 
 						  tecnologías de información en ambientes controlados y 
@@ -24724,13 +26259,13 @@ a:link
 						  <ul>
 							  <li>
 							  <font size="-1" color="#663366" face="Arial,Helvetica">
-							  <span class="auto-style70"><strong>SICT0303</strong>
+							  <span class="auto-style64"><strong>SICT0303</strong>
 							  <strong>Implementación de acciones</strong> </span>
 							  </font></li>
 						  </ul>
 						  <p class="auto-style72">
 						  <font color="#663366" face="Arial,Helvetica">
-						  <span class="auto-style69">Implementa acciones 
+						  <span class="auto-style64">Implementa acciones 
 						  científicas e ingenieriles o procesos computacionales 
 						  que cumplen con el tipo de solución requerida.</span></font></p>
 						  <p class="auto-style72">
@@ -24738,37 +26273,37 @@ a:link
 						  <span class="auto-style67"><strong>SCT0300 
 						  Implementación de infraestructura computacional</strong></span></font></p>
 						  <p class="auto-style72"><font color="#663366">
-						  <span class="auto-style69">Implementa infraestructura 
+						  <span class="auto-style64">Implementa infraestructura 
 						  computacional de vanguardia que satisface necesidades 
 						  de interconexión, operación y seguridad informática.</span></font></p>
 						  <ul>
 							  <li>
 							  <font size="-1" color="#663366" face="Arial,Helvetica">
-							  <span class="auto-style70"><strong>
+							  <span class="auto-style64"><strong>
 							  <span class="auto-style71">SCT0301 Configuración 
 							  de infraestructura computacional</span></strong><span class="auto-style71">
 							  </span></span></font></li>
 						  </ul>
 						  <p class="auto-style72"><font color="#663366">
-						  <span class="auto-style69">Configura el equipo que 
+						  <span class="auto-style69"><span class="auto-style73">Configura el equipo que 
 						  permite la operación de la interconexión de sistemas 
-						  computacionales bajo condiciones establecidas.</span></font></p>
+						  computacionales bajo condiciones establecidas.</span></span></font></p>
 						  <ul>
 							  <li><font color="#663366">
-							  <span class="auto-style69"><strong>SCT0302 
+							  <span class="auto-style64"><strong>SCT0302 
 							  Validación de la operación de la infraestructura 
 							  computacional</strong></span></font></li>
 						  </ul>
 						  <p class="auto-style72"><font color="#663366">
-						  <span class="auto-style69">Valida la operación de la 
+						  <span class="auto-style69"><span class="auto-style73">Valida la operación de la 
 						  infraestructura computacional para garantizar la 
-						  calidad de servicio.</span></font></p>
+						  calidad de servicio.</span></span></font></p>
 						  <ul>
-							  <li class="auto-style70"><strong>SCT0303 
+							  <li class="auto-style64"><strong>SCT0303 
 							  Integración de seguridad en proyectos 
 							  computacionales</strong></li>
 						  </ul>
-						  <p class="auto-style72">&nbsp;Integra conceptos de 
+						  <p class="auto-style74">&nbsp;Integra conceptos de 
 						  seguridad a sus aplicaciones computacionales.</p>
 						  <hr>
 						  <font size="-1" color="#663366" face="Arial,Helvetica">
