--- a/Calendario2024/index2.html
+++ b/Calendario2024/index2.html
@@ -456,7 +456,7 @@ a:hover {
 										 <strong>Actividad 2:</strong><span>&nbsp;</span><a href="Actividades/Actividad2_Analisis_red_residencial/2_Analisis_red_residencial_.docx">Características 
 													de una red inalámbrica 
 													residencial</a><span>&nbsp;</span>(Viernes 
-													17 de Mayo hasta las 23:59)</span></span></font></li>
+										 17 de Mayo hasta las 23:59)</span></span></font></li>
 										 <li>
 										 <font
  size="-1" face="Tahoma" class="auto-style140"><span class="auto-style63">
@@ -613,8 +613,8 @@ a:hover {
 													terminal?</a>
 												  <font
  size="-1" class="auto-style25"><span class="auto-style25">
-												  <span class="auto-style27">(Viernes 
-													17 de Mayo hasta las 
+												  <span class="auto-style27">(Jueves 
+												  16 de Mayo hasta las 
 													23:59)</span></span></font></span></li>
                                                                         
         
