--- a/Calendario2024/index2.html
+++ b/Calendario2024/index2.html
@@ -615,10 +615,13 @@ a:hover {
 													<span class="auto-style25">
 													<span class="auto-style139">
 													<font
- size="-1" class="auto-style25"><span class="auto-style27"><strong>
-													<span class="auto-style58">Kahoot M1: 
-													</span></strong>
-													<span class="auto-style58">Introducción</span></span></font></span></span></li>
+ size="-1" class="auto-style25"><span class="auto-style27">
+													<span class="auto-style58"><strong>
+													Kahoot M1</strong>: 
+													</span></span></font></span></span>
+													<span class="auto-style25" style="mso-fareast-font-family: Calibri; mso-fareast-theme-font: minor-latin; color: black; mso-ansi-language: ES-MX; mso-fareast-language: EN-US; mso-bidi-language: AR-SA">
+													Hardware, Modelo OSI y tipos 
+													de redes</span></li>
 													                                                                        
         
       </ul>
