--- a/Calendario2024/index2.html
+++ b/Calendario2024/index2.html
@@ -691,6 +691,11 @@ a:hover {
 										<li>
 										<font
  size="-1" class="auto-style25"><a href="Presentaciones/10_Direccionamiento.pdf">10. Direccionamiento</a></font></li>
+										<li class="auto-style25">
+										   <a href="Presentaciones/11_Subneteo.pdf">11. Subneteo (Longitud fija)</a></li>
+										<li class="auto-style25">
+										   <a href="Presentaciones/Direc_Subneteo_Alumnos.pptx">
+										   Direccionamiento y subneteo</a></li>
 									</ul>
 									<li><font
  size="-1" class="auto-style25"><b>Ejercicio 3: </b>
