--- a/Calendario2024/index_302.html
+++ b/Calendario2024/index_302.html
@@ -781,12 +781,11 @@ a:hover {
 									   </li>
 									   <li>
 									   <strong>Ejercicio 3</strong>.
-									   <a href="Ejercicios/3_Subredes/Ejercicio3_Direccionamiento.docx">Direccionamiento</a></li>
+									   <a href="Ejercicios/3_Direccionamiento/Anterior/Ejercicio3_Direccionamiento.docx">Direccionamiento</a></li>
 									   <li class="auto-style58">
 									   <strong>Ejercicio 
 									   4</strong>.
-									   <a href="Ejercicios/4_Subredes/Ejercicio4_Direccionamiento_Subredes.docx">
-									   Direccionamiento y subredes</a></li>
+									   <a href="Ejercicios/4_Subredes_Anterior/Ejercicio4_Direccionamiento_Subredes.docx">Direccionamiento y subredes</a></li>
 								</ul>
 								<font color="#663366">
 											  <span class="auto-style136">Después de la sesión:</span></font><ul>
@@ -837,18 +836,16 @@ a:hover {
 								  </li>
 								  <li><strong><span class="auto-style25">Ejercicio 
 									   4</span></strong><span class="auto-style25">.
-									   </span>
-								  <a href="Ejercicios/4_Subredes/Ejercicio4_Direccionamiento_Subredes.docx">
-								  <span class="auto-style25">Direccionamiento y subredes</span></a></li>
+									   <a href="Ejercicios/4_Subredes_Anterior/Ejercicio4_Direccionamiento_Subredes.docx">Direccionamiento y subredes</a></span></li>
 								  <li class="auto-style63"><strong>
 								  <span class="auto-style58">Ejercicio 
 									   5</span></strong><span class="auto-style58">.
 									   </span>
-								  <a href="Ejercicios/5_Subredes/Ejercicio5_Subredes.docx">
+								  <a href="Ejercicios/5_Subredes_Anterior/Ejercicio5_Subredes.docx">
 								  <span class="auto-style58">Subredes</span></a></li>
 								  <li class="auto-style63"><strong>
 								  <span class="auto-style58">Ejercicio 6</span></strong><span class="auto-style58">.
-									   <a href="Ejercicios/6_Subredes/Ejercicio6_Subredes.docx">Subredes</a></span></li>
+									   <a href="Ejercicios/5_Subredes/Ejercicio5_Subredes.docx">Subredes</a></span></li>
 								  <li class="auto-style63"><strong>
 								  <span class="auto-style58">Kahoot M2: </span>
 								  </strong><span class="auto-style58">Diseño 
