--- a/Calendario2024/index2.html
+++ b/Calendario2024/index2.html
@@ -913,10 +913,10 @@ a:hover {
 									   </li>
 									   <li class="auto-style63"><strong>
 									   <span class="auto-style58">Ejercicio 6</span></strong><span class="auto-style58">.
-									   Subredes VLSM</span></li>
+									   <a href="Ejercicios/6_Subredes_VLSM_N/Ejercicio6_VLSM.docx">Subredes VLSM</a></span></li>
 									   <li class="auto-style25"><strong>Ejercicio 
 									   7.</strong>
-									   Subredes VLSM</li>
+									   <a href="Ejercicios/7_Subredes_VLSM_N/Ejercicio7_VLSM.docx">Subredes VLSM</a></li>
 								</ul>
                                                                         
                                                                         
@@ -931,12 +931,12 @@ a:hover {
  size="-1" class="auto-style25"><b>
 													Actividad 10:                                </b>
 									   <span class="auto-style27">
-													El diseño de subredes con 
+													<a href="https://experiencia21.tec.mx/courses/466729/quizzes/3464496?module_item_id=28506488">El diseño de subredes con 
 													máscaras de longitud 
-													variable (VLSM)</span><span class="auto-style25"><span class="auto-style27">
+													variable (VLSM)</a></span><span class="auto-style25"><span class="auto-style27">
 													(Viernes 23 de Mayo hasta las 23:59)</span></span></font><ul>
 														<li class="auto-style25">
-														Actividad9.docx</li>
+														<a href="Actividades/Actividad10_Diseño_subredes_VLSM/Canvas/10.%20Diseño%20de%20subredes%20VLSM_.docx">Actividad10.docx</a></li>
 													</ul>
 									   </li>
 								</ul>
