--- a/Calendario2024/index2.html
+++ b/Calendario2024/index2.html
@@ -919,15 +919,13 @@ a:hover {
 									   <span class="auto-style27">
 									   <a href="https://experiencia21.tec.mx/courses/466729/quizzes/3464496?module_item_id=28506488">El diseño de subredes con 
 													máscaras de longitud 
-													variable (VLSM)</a></span></font><ul class="auto-style120">
+													variable (VLSM)</a> <span class="auto-style25">
+									   (Viernes 23 de 
+													Mayo hasta las 23:59)</span></span></font><ul class="auto-style120">
 										   <li class="auto-style25">
 										   <a href="Actividades/Actividad10_Diseño_subredes_VLSM/Canvas/10.%20Diseño%20de%20subredes%20VLSM_.docx">Actividad10.docx</a></li>
 									   </ul>
 									   </li>
-									   <li class="auto-style25"><strong>
-								  	 <span class="auto-style58">Kahoot M2: </span>
-								  </strong><span class="auto-style58">Diseño 
-								  físico de una red</span></li>
 								</ul>
                                                                         
                                                                         
@@ -988,6 +986,11 @@ a:hover {
  size="-1" class="auto-style25"><a href="Actividades/Actividad11_Configuracion/v2/Act11.pkt">Act11.pkt</a></font></li>
 									   </ul>
 									   </li>
+									   <li>
+													<strong>
+								  	 <span class="auto-style25">Kahoot M2: </span>
+								  </strong><span class="auto-style25">Diseño 
+								  físico de una red</span></li>
 									   <li>
 													<font
  size="-1" color="#663366" face="Tahoma" class="auto-style58">
