--- a/Calendario2024/Examenes/ExamenIntegrador1.html
+++ b/Calendario2024/Examenes/ExamenIntegrador1.html
@@ -23214,21 +23214,16 @@ a:link
 						  examen incluirá los siguientes temas:</span></font></p>
 						  <span class="auto-style73">
 						  <p class="auto-style72"><strong>Parte 1:&nbsp;&nbsp;Configuración 
-						de DHCP </strong>(Revisar ejercicios 10 y 16. Revisar 
-						  actividades 11 y 13)</p>
+						de DHCP</strong></p>
 						  <p class="auto-style72"><strong>Parte 2:&nbsp; Configuración 
-						de rutas estáticas y por default </strong>(Revisar 
-						  ejercicio 12)</p>
+						de rutas estáticas y por default</strong></p>
 						  <ul class="auto-style74">
 							  <li>Rutas directamente 
 							conectadas</li>
 							  <li>Rutas del next-hop o recursivas</li>
 						  </ul>
 						  <p class="auto-style72"><strong>Parte 3:&nbsp;</strong>
-						  <strong>Configuración de VLANs </strong>
-						  <span class="auto-style73">(Revisar ejercicios 14, 15 
-						  y 16. Revisar actividad 13)</span><strong> </strong>
-						  </p>
+						  <strong>Configuración de VLANs</strong></p>
 						  <p class="auto-style72"><strong>Parte 4:&nbsp; Comandos 
 						básicos de configuración de un router y un switch</strong></p>
 						  <ul class="auto-style74">
