--- a/Calendario2024/Examenes/ExamenIntegrador2.html
+++ b/Calendario2024/Examenes/ExamenIntegrador2.html
@@ -26312,11 +26312,9 @@ a:link
 						  <span class="auto-style64"> El 
 						  examen incluirá los siguientes temas:</span></font></div>
 						<p class="auto-style62"><strong>Parte 1:&nbsp;Configuración 
-						de DHCP </strong><span class="auto-style73">(Revisar 
-						ejercicios 10 y 16. Revisar actividades 11 y 13)</span></p>
+						de DHCP </strong></p>
 						<p class="auto-style62"><strong>Parte 2:&nbsp;Configuración 
-						de rutas estáticas y por default </strong>
-						<span class="auto-style73">(Revisar ejercicio 12)</span></p>
+						de rutas estáticas y por default </strong></p>
 						<ul class="auto-style59">
 							<li>
 							<p class="auto-style62">Rutas directamente 
@@ -26327,9 +26325,7 @@ a:link
 							recursivas. </p>
 							</li>
 						</ul>
-						<p class="auto-style62"><strong>Parte 3:&nbsp;Configuración de VLANs</strong><span class="auto-style73"> 
-						(Revisar ejercicios 14, 15 y 16. Revisar actividad 13)
-						</span></p>
+						<p class="auto-style62"><strong>Parte 3:&nbsp;Configuración de VLANs</strong></p>
 						<p class="auto-style62"><strong>Parte 4: Configuración 
 						de dispositivos </strong></p>
 						<p class="auto-style62">&nbsp;&nbsp;&nbsp;&nbsp; 
