--- a/Calendario2024/index2.html
+++ b/Calendario2024/index2.html
@@ -3016,15 +3016,16 @@ a:hover {
 													</ul>
 													</li>
 													<li class="auto-style25">
-													<strong>Ejercicio 16.
-													</strong>Configuración de 
-													RIP<font
+													<strong>Ejercicio 15.
+													</strong>
+													<a href="Ejercicios/15_RIP/Ejercicio15_RuteoDinamicoRIP.docx">Configuración de 
+													RIP</a><font
  size="-1" face="Tahoma" class="auto-style58"><ul>
 														<li class="auto-style25">
-														Ejer16.pkt</font><font
+														<a href="Ejercicios/15_RIP/Ejer15.pkt">Ejer15.pkt</a></font><font
  size="-1" color="#663366" face="Tahoma" class="auto-style58"></li>
 														<li class="auto-style144">
-														Ejer16.txt</li>
+														<a href="Ejercicios/15_RIP/Ejer15.txt">Ejer15.txt</a></li>
 										</font>
 													</ul>
 													</li>
@@ -3227,7 +3228,7 @@ a:hover {
 													<font
  size="-1" face="Tahoma" class="auto-style58"><strong>
 													<span class="auto-style63">Ejercicio 
-													17.</span></strong><span class="auto-style63">
+													16.</span></strong><span class="auto-style63">
 													Configuración IPv6</span></font></li>
                                                                         
                                                                         
