--- a/CalendarioAgo24/index.html
+++ b/CalendarioAgo24/index.html
@@ -460,8 +460,8 @@ a:hover {
 										 <span class="auto-style27" style="font-weight: normal;">
 										 <strong>Actividad 3:</strong><span>&nbsp;</span>Auto 
 													capacitación en el uso del 
-													simulador de red<span class="auto-style132" style="background-color: rgb(255, 255, 255);"><span>&nbsp;</span>(Miércoles 
-													6 de Noviembre hasta las 23:59)</span></span></span></font></li>
+													simulador de red<span class="auto-style132" style="background-color: rgb(255, 255, 255);"><span>&nbsp;</span>(Domingo 
+										 3 de Noviembre hasta las 23:59)</span></span></span></font></li>
 									 </ul>
                                                                         
                                                                         
