--- a/CalendarioAgo24/index.html
+++ b/CalendarioAgo24/index.html
@@ -780,9 +780,9 @@ a:hover {
 									   <font
  size="-1" class="auto-style25"><span class="auto-style51">Actividad 7: </span>
 									   <span class="auto-style27">
-									   Diseño de esquemas de direccionamiento</span></font><ul>
+									   <a href="https://experiencia21.tec.mx/courses/498535/quizzes/3834902">Diseño de esquemas de direccionamiento</a></span></font><ul>
 										   <li class="auto-style165">
-										   Actividad7.docx</li>
+										   <a href="Actividades/Actividad7_Direccionamiento/v2/7_Direccionamiento.docx">Actividad7.docx</a></li>
 									   </ul>
 									   </li>
 								</ul>
