--- a/CalendarioAgo24/index.html
+++ b/CalendarioAgo24/index.html
@@ -833,9 +833,9 @@ a:hover {
 								  <font
  size="-1" class="auto-style25"><span class="auto-style51">Actividad 8: </span>
 								  <span class="auto-style27">
-								  Subredes</span></font><ul>
+								  <a href="https://experiencia21.tec.mx/courses/498535/quizzes/3834905/take?preview=1">Subredes</a></span></font><ul>
 									  <li class="auto-style166">
-									  Actividad8.docx</li>
+									  <a href="Actividades/Actividad8_Subredes/v2/8_Subredes.docx">Actividad8.docx</a></li>
 								  </ul>
 								  </li>
 								</ul>
@@ -853,11 +853,11 @@ a:hover {
 									   <font
  size="-1" class="auto-style25"><span class="auto-style51">Actividad 9: </span>
 									   <span class="auto-style27">
-									   El diseño de subredes <span class="auto-style25">(Miércoles 
+									   <a href="https://experiencia21.tec.mx/courses/498535/quizzes/3834910">El diseño de subredes</a> <span class="auto-style25">(Miércoles 
 													6 de 
 													Noviembre hasta las 23:59)</span></span></font><ul>
 										   <li class="auto-style25">
-										   Actividad9.docx</li>
+										   <a href="Actividades/Actividad9_Diseño_subredes/v2/9_Diseño_%20de_%20subredes.docx">Actividad9.docx</a></li>
 									   </ul>
 									   </li>
 								</ul>
