--- a/CalendarioAgo24/index.html
+++ b/CalendarioAgo24/index.html
@@ -907,13 +907,13 @@ a:hover {
 									   <font
  size="-1" class="auto-style25"><b>Actividad 10:                                </b>
 									   <span class="auto-style27">
-									   El diseño de subredes con 
+									   <a href="https://experiencia21.tec.mx/courses/498535/quizzes/3834907?module_item_id=32001776">El diseño de subredes con 
 													máscaras de longitud 
-													variable (VLSM) <span class="auto-style25">
+													variable (VLSM)</a> <span class="auto-style25">
 									   (Viernes 8 de 
 													Noviembre hasta las 23:59)</span></span></font><ul class="auto-style120">
 										   <li class="auto-style25">
-										   Actividad10.docx</li>
+										   <a href="Actividades/Actividad10_Diseño_subredes_VLSM/Canvas/10.%20Diseño%20de%20subredes%20VLSM_.docx">Actividad10.docx</a></li>
 									   </ul>
 									   </li>
 								</ul>
@@ -968,12 +968,12 @@ a:hover {
 									   <li class="auto-style63">
 									   <font
  size="-1" class="auto-style25"><b>Actividad 11:                                </b>
-									   Configuración básica de los 
+									   <a href="Actividades/Actividad11_Configuracion/v2/11.%20ConfiguracionBasica_.docx">Configuración básica de los 
 													equipos de interconexión de 
-													una red</font><ul>
+													una red</a></font><ul>
 										   <li>
 										   <font
- size="-1" class="auto-style25">Act11.pkt</font></li>
+ size="-1" class="auto-style25"><a href="Actividades/Actividad11_Configuracion/v2/Act11.pkt">Act11.pkt</a></font></li>
 									   </ul>
 									   </li>
 									   <li>
