--- a/CalendarioAgo24/index.html
+++ b/CalendarioAgo24/index.html
@@ -1203,10 +1203,10 @@ a:hover {
 												  <span class="auto-style25">
 												  <span class="auto-style27">
 												  <span class="auto-style120">
-												  Instalación del servicio 
-													DHCP en un ruteador</span></span></span></font><ul>
+												  <a href="Actividades/Actividad12_DHCP/v2/12.%20ConfiguracionDHCP.docx">Instalación del servicio 
+													DHCP en un ruteador</a></span></span></span></font><ul>
 													  <li class="auto-style25">
-													  Act12y13.pkt</li>
+													  <a href="Actividades/Actividad12_DHCP/v2/Act12y13.pkt">Act12y13.pkt</a></li>
 													  <li>
 													  <a href="Actividades/Comandos.pdf">Comandos</a></li>
 												  </ul>
