--- a/CalendarioAgo24/index.html
+++ b/CalendarioAgo24/index.html
@@ -1626,10 +1626,10 @@ a:hover {
  size="-1" class="auto-style25"><b>
 													Actividad 14:                                </b>
 													<span class="auto-style25"> 
-													Configuración básica de 
-													VLANs y DHCP<span class="auto-style27"><ul>
+													<a href="Actividades/Actividad14_VLANs/Agosto/14.%20ConfiguracionVLANs.docx">Configuración básica de 
+													VLANs y DHCP</a><span class="auto-style27"><ul>
 														<li>
-														Act14.pkt</li>
+														<a href="Actividades/Actividad14_VLANs/Agosto/Act14.pkt">Act14.pkt</a></li>
 														<li>
 														<font
  size="-1" face="Arial,Helvetica">
