--- a/CalendarioAgo24/index.html
+++ b/CalendarioAgo24/index.html
@@ -2083,16 +2083,17 @@ a:hover {
 											<li><span class="auto-style120">
 											<strong>Ejercicio 
 									   			    12.</strong></span>
-											<a href="Ejercicios/12_VLAN_Seg_SSH/Ejer12_VLANs_2024.docx">Configuración de 
-											VLANs, seguridad y ssh</a><ul>
+											<a href="Ejercicios/12_VLAN_SSH/Ejer12.docx">Configuración de 
+											VLANs, SSH y seguridad</a><ul>
 												<li class="auto-style25">
-												<a href="Ejercicios/12_VLAN_Seg_SSH/ejer12.pkt">Ejer12.pkt</a></li>
+												<a href="Ejercicios/12_VLAN_SSH/ejer12.pkt">Ejer12.pkt</li>
+												</a>
 												<font
  size="-1" face="Arial,Helvetica"><font class="auto-style25" size="-1">
 												<li class="auto-style25">
-												<a href="Ejercicios/12_VLAN_Seg_SSH/ConfigBase.txt">ConfigBase.txt</a></li>
+												<a href="Ejercicios/12_VLAN_SSH/ConfigBase.txt">ConfigBase.txt</a></li>
 												<li class="auto-style25">
-												<a href="Ejercicios/12_VLAN_Seg_SSH/ComandosBasicosVLANs.txt">ComandosConfigVLANs.txt</a></font></font></ul>
+												<a href="Ejercicios/12_VLAN_SSH/ComandosBasicosVLANs.txt">ComandosBasicosVLANs.txt</a></font></font></ul>
 											</li>
 								</font></font></font></font></font></font>
 											</font></font></font></font></font>
