--- a/CalendarioAgo24/Examenes/ExamenIntegrador2.html
+++ b/CalendarioAgo24/Examenes/ExamenIntegrador2.html
@@ -26413,7 +26413,9 @@ a:link
 							gateway </p>
 							</li>
 						</ul>
-						<p class="auto-style62"><strong>Parte 5:&nbsp;Pruebas de 
+						<p class="auto-style62"><strong>Parte 5:&nbsp;Configurar 
+						el router y switch para acceso remoto por SSH</strong></p>
+						<p class="auto-style62"><strong>Parte 6:&nbsp;Pruebas de 
 						conectividad&nbsp; (ping, telnet, web browser)</strong></p>
                        </td>
                        </tr>
