--- a/Calendario2025/index.html
+++ b/Calendario2025/index.html
@@ -603,9 +603,9 @@ a:hover {
 													<strong>Actividad 5:</strong>
 													</span>
 													<span class="auto-style139">
-													¿Cuál es la velocidad de 
+													<a href="Actividades/Actividad5_%20SpeedTest_MAC_IP/5_SpeedTest.docx">¿Cuál es la velocidad de 
 													conexión de mi equipo 
-													terminal?
+													terminal?</a>
 													<font
  size="-1" class="auto-style25"><span class="auto-style25">
 													<span class="auto-style27">(Jueves 
@@ -613,8 +613,8 @@ a:hover {
 													23:59)</span></span></font></span></li>
 													<li><strong>
 													<span class="auto-style25">Actividad 6:</span></strong><span class="auto-style25">
-													Las direcciones MAC e IP de mi equipo 
-									   terminal</span></li>
+													<a href="Actividades/Actividad6_Direccionamiento/6_Direccionamiento.docx">Las direcciones MAC e IP de mi equipo 
+									   terminal</a></span></li>
 													<li>
 													<span class="auto-style25">
 													<span class="auto-style139">
