--- a/Calendario2025/index.html
+++ b/Calendario2025/index.html
@@ -788,7 +788,7 @@ a:hover {
 									   <font
  size="-1" class="auto-style25"><span class="auto-style51">Actividad 7: </span>
 									   <span class="auto-style27">
-									   Diseño de esquemas de direccionamiento</span></font><ul>
+									   <a href="https://experiencia21.tec.mx/courses/560909/quizzes/4092669/take?preview=1">Diseño de esquemas de direccionamiento</a></span></font><ul>
 										   <li class="auto-style165">
 										   <a href="Actividades/Actividad7_Direccionamiento/v1/7_Direccionamiento.docx">Actividad7.docx</a></li>
 									   </ul>
