--- a/Calendario2025/index.html
+++ b/Calendario2025/index.html
@@ -841,7 +841,7 @@ a:hover {
 								  <font
  size="-1" class="auto-style25"><span class="auto-style51">Actividad 8: </span>
 								  <span class="auto-style27">
-								  Subredes</span></font><ul>
+								  <a href="https://experiencia21.tec.mx/courses/560909/quizzes/4092652/take?preview=1">Subredes</a></span></font><ul>
 									  <li class="auto-style166">
 									  <a href="Actividades/Actividad8_Subredes/v1/8_Subredes.docx">Actividad8.docx</a></li>
 								  </ul>
@@ -861,7 +861,7 @@ a:hover {
 									   <font
  size="-1" class="auto-style25"><span class="auto-style51">Actividad 9: </span>
 									   <span class="auto-style27">
-									   El diseño de subredes <span class="auto-style25">(Miércoles 
+									   <a href="https://experiencia21.tec.mx/courses/560909/quizzes/4092648/take?preview=1">El diseño de subredes</a> <span class="auto-style25">(Miércoles 
 													19 de 
 													Febrero hasta las 23:59)</span></span></font><ul>
 										   <li class="auto-style25">
