--- a/Calendario2025/index.html
+++ b/Calendario2025/index.html
@@ -915,9 +915,9 @@ a:hover {
 									   <font
  size="-1" class="auto-style25"><b>Actividad 10:                                </b>
 									   <span class="auto-style27">
-									   El diseño de subredes con 
+									   <a href="https://experiencia21.tec.mx/courses/560909/quizzes/4092646/take?preview=1">El diseño de subredes con 
 													máscaras de longitud 
-													variable (VLSM) <span class="auto-style25">
+													variable (VLSM)</a> <span class="auto-style25">
 									   (Viernes 21 de 
 													Febrero hasta las 23:59)</span></span></font><ul class="auto-style120">
 										   <li class="auto-style25">
