--- a/Calendario2025/Examenes/ExamenIntegrador1.html
+++ b/Calendario2025/Examenes/ExamenIntegrador1.html
@@ -24673,7 +24673,7 @@ a:link
       <center> 	  
 	  <img src="computer3.jpg" height="129" width="168"
  alt=""><p class="auto-style60"><font color="#663366" face="Arial,Helvetica">
-	  Viernes 8 de Marzo</font></p>
+	  Lunes 10 de Marzo</font></p>
              	                                                          
              </center>
         </td>
