--- a/Calendario2025/index2.html
+++ b/Calendario2025/index2.html
@@ -1223,16 +1223,18 @@ a:hover {
  size="-1" class="auto-style25"><b>Actividad 12:                                </b>
 													<span class="auto-style120">
 													<a href="Actividades/Actividad12_DHCP/v2/12.%20ConfiguracionDHCP.docx">Instalación del servicio 
-													DHCP en un ruteador</a></span></font></li>
-													<li class="auto-style25">
-													<a href="Actividades/Actividad12_DHCP/v2/Act12y13.pkt">Act12y13.pkt</a></li>
-													<li class="auto-style25"><font
+													DHCP en un ruteador</a></span></font><ul>
+														<li class="auto-style25">
+														<a href="Actividades/Actividad12_DHCP/v2/Act12y13.pkt">Act12y13.pkt</a></li>
+														<li class="auto-style25">
+														<font
  size="-1" face="Arial,Helvetica"><font class="auto-style25" size="-1">
-									 <span class="auto-style27">
-									   <span class="auto-style25">
-												  <font
- size="-1" face="Arial,Helvetica">
-													  <a href="Actividades/Comandos.pdf">Comandos</a></font></span></span></font></font></li>
+														<span class="auto-style27">
+														<span class="auto-style25">
+														<font
+ size="-1" face="Arial,Helvetica"><a href="Actividades/Comandos.pdf">Comandos</a></font></span></span></font></font></li>
+													</ul>
+													</li>
 													</span></span></font></font>
 													</font>
                                                                         
