--- a/Calendario2025/index2.html
+++ b/Calendario2025/index2.html
@@ -955,6 +955,9 @@ a:hover {
 										   <a href="Actividades/Actividad10_Diseño_subredes_VLSM/10.%20Diseño%20de%20subredes%20VLSM_.docx">Actividad10.docx</a></li>
 									   </ul>
 									   </li>
+									   <li class="auto-style25">
+									   <a href="https://drive.google.com/file/d/1vSAwsJyLls8eiaBCNtgy9aacz2E9E_qd/view?usp=drive_link">
+									   Grabación de la clase VLSM</a></li>
 								</ul>
                                                                         
                                                                         
