--- a/Calendario2025/index2.html
+++ b/Calendario2025/index2.html
@@ -2755,10 +2755,11 @@ a:hover {
 									   </li>
 									   <li class="auto-style63"><strong>
 									   <span class="auto-style140">Ejercicio 12.</span></strong>
-									   <span class="auto-style120">Configuración SSH 
-									   y seguridad</span><ul class="auto-style120">
+									   <span class="auto-style120">
+									   <a href="Ejercicios/12_SSH_v2/12_SSH_Seguridad.docx">Configuración SSH 
+									   y seguridad</a></span><ul class="auto-style120">
 										   <li class="auto-style63">
-										   ejer12.pkt</li>
+										   <a href="Ejercicios/12_SSH_v2/Ejer12.pkt">ejer12.pkt</a></li>
 									   </ul>
 									   </li>
                                                                         
@@ -3181,12 +3182,13 @@ a:hover {
 									   </li>
 									   <li class="auto-style63"><strong>
 									   <span class="auto-style140">Ejercicio 13.</span></strong>
-									   <span class="auto-style120">Configuración 
-									   de VLANs, SSH y seguridad</span><ul class="auto-style120">
+									   <span class="auto-style120">
+									   <a href="Ejercicios/13_VLAN_SSH_v2/Ejer13.docx">Configuración 
+									   de VLANs, DHCP y SSH</a></span><ul class="auto-style120">
 										   <li class="auto-style63">
-										   ejer13.pkt</li>
+										   <a href="Ejercicios/13_VLAN_SSH_v2/ejer13.pkt">ejer13.pkt</a></li>
 										   <li class="auto-style63">
-										   ejer13.txt</li>
+										   <a href="Ejercicios/13_VLAN_SSH_v2/ejer13.txt">ejer13.txt</a></li>
 										   <li class="auto-style63">
 										<span class="auto-style120">
 										<span class="auto-style28">
