--- a/Calendario2025/index2.html
+++ b/Calendario2025/index2.html
@@ -4480,14 +4480,14 @@ a:hover {
 													<li class="auto-style25">
 													<strong>Ejercicio 14.
 													</strong>
-													Configuración de 
-													RIP<font
+													<a href="Ejercicios/14_RIPv2/Ejercicio14_RIP.docx">Configuración de 
+													RIP</a><font
  size="-1" face="Tahoma" class="auto-style58"><ul>
 														<li class="auto-style25">
-														Ejer14.pkt</font><font
+														<a href="Ejercicios/14_RIPv2/Ejer14.pkt">Ejer14.pkt</a></font><font
  size="-1" color="#663366" face="Tahoma" class="auto-style58"></li>
 														<li class="auto-style144">
-														Ejer14.txt</li>
+														<a href="Ejercicios/14_RIPv2/Ejer14.txt">Ejer14.txt</a></li>
 													</ul>
 													</li>
                                                                         
